--- a/class-00/lab-c/starter-code/styles/layout.css
+++ b/class-00/lab-c/starter-code/styles/layout.css
@@ -59,3 +59,17 @@ footer section p{
   text-align: center;
   color: #aaa;
 }
+
+
+hr {
+  clear: both;
+  border: 0;
+  height: 13px;
+  background-image: url('../img/hr.png');
+}
+
+
+section hr {
+  border-bottom: 1px solid #eee;
+  height: 0;
+}
